Closed Bug 284687 Opened 21 years ago Closed 21 years ago

###!!! ASSERTION: index out of range: '0 <= aIndex && aIndex < Count()', file r:/mozilla/xpcom/build/../ds\nsVoidArray.h, line 80

Categories

(Core :: Graphics: ImageLib, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.8beta2

People

(Reporter: timeless, Assigned: darin.moz)

Details

(Keywords: assertion)

Attachments

(1 file, 1 obsolete file)

###!!! ASSERTION: index out of range: '0 <= aIndex && aIndex < Count()', file r:/mozilla/xpcom/build/../ds\nsVoidArray.h, line 80 Break: at file r:/mozilla/xpcom/build/../ds\nsVoidArray.h, line 80 mObservers.mImpl->mCount 0x00000000 int xpcom_core.dll!nsDebug::Assertion(const char * aStr=0x0050a460, const char * aExpr=0x0050a478, const char * aFile=0x0050a4a0, int aLine=0x00000050) Line 109 C++ xpcom_core.dll!nsVoidArray::ElementAt(int aIndex=0x00000000) Line 80 + 0x29 C++ xpcom_core.dll!nsVoidArray::operator[](int aIndex=0x00000000) Line 95 + 0x13 C++ > imglib2.dll!imgRequest::AdjustPriority(imgRequestProxy * proxy=0x0a2e43d8, int delta=0xffffffff) Line 347 + 0xe C++ imglib2.dll!imgRequestProxy::AdjustPriority(int priority=0xffffffff) Line 377 C++ gklayout.dll!nsImageFrame::Init(nsPresContext * aPresContext=0x0a055be8, nsIContent * aContent=0x07369530, nsIFrame * aParent=0x0bdeba90, nsStyleContext * aContext=0x0bdebb5c, nsIFrame * aPrevInFlow=0x00000000) Line 312 C++ gklayout.dll!nsCSSFrameConstructor::InitAndRestoreFrame(const nsFrameConstructorState & aState={...}, nsIContent * aContent=0x07369530, nsIFrame * aParentFrame=0x0bdeba90, nsStyleContext * aStyleContext=0x0bdebb5c, nsIFrame * aPrevInFlow=0x00000000, nsIFrame * aNewFrame=0x0bdebba8) Line 6678 + 0x22 C++ gklayout.dll!nsCSSFrameConstructor::ConstructHTMLFrame (nsFrameConstructorState & aState={...}, nsIContent * aContent=0x07369530, nsIFrame * aParentFrame=0x0bdeba90, nsIAtom * aTag=0x0034f600, int aNameSpaceID=0x00000000, nsStyleContext * aStyleContext=0x0bdebb5c, nsFrameItems & aFrameItems={...}, int aHasPseudoParent=0x00000000) Line 5318 + 0x21 C++ gklayout.dll!nsCSSFrameConstructor::ConstructFrameInternal (nsFrameConstructorState & aState={...}, nsIContent * aContent=0x07369530, nsIFrame * aParentFrame=0x0bdeba90, nsIAtom * aTag=0x0034f600, int aNameSpaceID=0x00000000, nsStyleContext * aStyleContext=0x0bdebb5c, nsFrameItems & aFrameItems={...}, int aXBLBaseTag=0x00000000) Line 7537 + 0x30 C++ gklayout.dll!nsCSSFrameConstructor::ConstructFrame (nsFrameConstructorState & aState={...}, nsIContent * aContent=0x07369530, nsIFrame * aParentFrame=0x0bdeba90, nsFrameItems & aFrameItems={...}) Line 7432 + 0x33 C++ gklayout.dll!nsCSSFrameConstructor::ProcessChildren (nsFrameConstructorState & aState={...}, nsIContent * aContent=0x08cebfa8, nsIFrame * aFrame=0x0bdeba90, int aCanHaveGeneratedContent=0x00000001, nsFrameItems & aFrameItems={...}, int aParentIsBlock=0x00000001, nsTableCreator * aTableCreator=0x00000000) Line 11674 + 0x3a C++ gklayout.dll!nsCSSFrameConstructor::ConstructTableCellFrame (nsFrameConstructorState & aState={...}, nsIContent * aContent=0x08cebfa8, nsIFrame * aParentFrameIn=0x0bdeb8c8, nsStyleContext * aStyleContext=0x0bdeb9a4, nsTableCreator & aTableCreator={...}, int aIsPseudo=0x00000000, nsFrameItems & aChildItems={...}, nsIFrame * & aNewCellOuterFrame=0x0bdeba30, nsIFrame * & aNewCellInnerFrame=0x0bdeba90, int & aIsPseudoParent=0x00000000) Line 3503 + 0x20 C++ gklayout.dll!nsCSSFrameConstructor::TableProcessChild (nsFrameConstructorState & aState={...}, nsIContent * aChildContent=0x08cebfa8, nsIContent * aParentContent=0x0bcd3e58, nsIFrame * aParentFrame=0x0bdeb8c8, nsIAtom * aParentFrameType=0x0034fe28, nsStyleContext * aParentStyleContext=0x0bdeb83c, nsTableCreator & aTableCreator={...}, nsFrameItems & aChildItems={...}, nsIFrame * & aCaption=0x00000000) Line 3771 + 0x33 C++ gklayout.dll!nsCSSFrameConstructor::TableProcessChildren (nsFrameConstructorState & aState={...}, nsIContent * aContent=0x0bcd3e58, nsIFrame * aParentFrame=0x0bdeb8c8, nsTableCreator & aTableCreator={...}, nsFrameItems & aChildItems={...}, nsIFrame * & aCaption=0x00000000) Line 3659 + 0x3a C++ gklayout.dll!nsCSSFrameConstructor::ConstructTableRowFrame (nsFrameConstructorState & aState={...}, nsIContent * aContent=0x0bcd3e58, nsIFrame * aParentFrameIn=0x0bdeb7fc, nsStyleContext * aStyleContext=0x0bdeb83c, nsTableCreator & aTableCreator={...}, int aIsPseudo=0x00000000, nsFrameItems & aChildItems={...}, nsIFrame * & aNewFrame=0x0bdeb8c8, int & aIsPseudoParent=0x00000000) Line 3350 + 0x22 C++ gklayout.dll!nsCSSFrameConstructor::TableProcessChild (nsFrameConstructorState & aState={...}, nsIContent * aChildContent=0x0bcd3e58, nsIContent * aParentContent=0x08ae5640, nsIFrame * aParentFrame=0x0bdeb7fc, nsIAtom * aParentFrameType=0x0034fe20, nsStyleContext * aParentStyleContext=0x0bdeb7b0, nsTableCreator & aTableCreator={...}, nsFrameItems & aChildItems={...}, nsIFrame * & aCaption=0x00000000) Line 3755 + 0x2f C++ gklayout.dll!nsCSSFrameConstructor::TableProcessChildren (nsFrameConstructorState & aState={...}, nsIContent * aContent=0x08ae5640, nsIFrame * aParentFrame=0x0bdeb7fc, nsTableCreator & aTableCreator={...}, nsFrameItems & aChildItems={...}, nsIFrame * & aCaption=0x00000000) Line 3659 + 0x3a C++ gklayout.dll!nsCSSFrameConstructor::ConstructTableRowGroupFrame (nsFrameConstructorState & aState={...}, nsIContent * aContent=0x08ae5640, nsIFrame * aParentFrameIn=0x0bdeb714, nsStyleContext * aStyleContext=0x0bdeb7b0, nsTableCreator & aTableCreator={...}, int aIsPseudo=0x00000000, nsFrameItems & aChildItems={...}, nsIFrame * & aNewFrame=0x0bdeb7fc, int & aIsPseudoParent=0x00000000) Line 3239 + 0x22 C++ gklayout.dll!nsCSSFrameConstructor::TableProcessChild (nsFrameConstructorState & aState={...}, nsIContent * aChildContent=0x08ae5640, nsIContent * aParentContent=0x0b9b8ea8, nsIFrame * aParentFrame=0x0bdeb714, nsIAtom * aParentFrameType=0x0034fe10, nsStyleContext * aParentStyleContext=0x0bdeb5c4, nsTableCreator & aTableCreator={...}, nsFrameItems & aChildItems={...}, nsIFrame * & aCaption=0x00000000) Line 3748 + 0x2f C++ gklayout.dll!nsCSSFrameConstructor::TableProcessChildren (nsFrameConstructorState & aState={...}, nsIContent * aContent=0x0b9b8ea8, nsIFrame * aParentFrame=0x0bdeb714, nsTableCreator & aTableCreator={...}, nsFrameItems & aChildItems={...}, nsIFrame * & aCaption=0x00000000) Line 3659 + 0x3a C++ gklayout.dll!nsCSSFrameConstructor::ConstructTableFrame (nsFrameConstructorState & aState={...}, nsIContent * aContent=0x0b9b8ea8, nsIFrame * aContentParent=0x0bdeb524, nsStyleContext * aStyleContext=0x0bdeb5c4, nsTableCreator & aTableCreator={...}, int aIsPseudo=0x00000000, nsFrameItems & aChildItems={...}, nsIFrame * & aNewOuterFrame=0x0bdeb610, nsIFrame * & aNewInnerFrame=0x0bdeb714) Line 3118 + 0x22 C++ gklayout.dll!nsCSSFrameConstructor::ConstructFrameByDisplayType (nsFrameConstructorState & aState={...}, const nsStyleDisplay * aDisplay=0x09b684e0, nsIContent * aContent=0x0b9b8ea8, int aNameSpaceID=0x00000000, nsIAtom * aTag=0x0034f8d0, nsIFrame * aParentFrame=0x0bdeb524, nsStyleContext * aStyleContext=0x0bdeb5c4, nsFrameItems & aFrameItems={...}, int aHasPseudoParent=0x00000000) Line 6546 + 0x2a C++ gklayout.dll!nsCSSFrameConstructor::ConstructFrameInternal (nsFrameConstructorState & aState={...}, nsIContent * aContent=0x0b9b8ea8, nsIFrame * aParentFrame=0x0bdeb524, nsIAtom * aTag=0x0034f8d0, int aNameSpaceID=0x00000000, nsStyleContext * aStyleContext=0x0bdeb5c4, nsFrameItems & aFrameItems={...}, int aXBLBaseTag=0x00000000) Line 7603 + 0x34 C++ gklayout.dll!nsCSSFrameConstructor::ConstructFrame (nsFrameConstructorState & aState={...}, nsIContent * aContent=0x0b9b8ea8, nsIFrame * aParentFrame=0x0bdeb524, nsFrameItems & aFrameItems={...}) Line 7432 + 0x33 C++ gklayout.dll!nsCSSFrameConstructor::ProcessChildren (nsFrameConstructorState & aState={...}, nsIContent * aContent=0x09fb24d8, nsIFrame * aFrame=0x0bdeb524, int aCanHaveGeneratedContent=0x00000001, nsFrameItems & aFrameItems={...}, int aParentIsBlock=0x00000001, nsTableCreator * aTableCreator=0x00000000) Line 11674 + 0x3a C++ gklayout.dll!nsCSSFrameConstructor::ConstructTableCellFrame (nsFrameConstructorState & aState={...}, nsIContent * aContent=0x09fb24d8, nsIFrame * aParentFrameIn=0x0a00ffd8, nsStyleContext * aStyleContext=0x0a0100b4, nsTableCreator & aTableCreator={...}, int aIsPseudo=0x00000000, nsFrameItems & aChildItems={...}, nsIFrame * & aNewCellOuterFrame=0x0a010134, nsIFrame * & aNewCellInnerFrame=0x0bdeb524, int & aIsPseudoParent=0x00000000) Line 3503 + 0x20 C++ gklayout.dll!nsCSSFrameConstructor::TableProcessChild (nsFrameConstructorState & aState={...}, nsIContent * aChildContent=0x09fb24d8, nsIContent * aParentContent=0x09e89180, nsIFrame * aParentFrame=0x0a00ffd8, nsIAtom * aParentFrameType=0x0034fe28, nsStyleContext * aParentStyleContext=0x098a6e44, nsTableCreator & aTableCreator={...}, nsFrameItems & aChildItems={...}, nsIFrame * & aCaption=0x00000000) Line 3771 + 0x33 C++ gklayout.dll!nsCSSFrameConstructor::TableProcessChildren (nsFrameConstructorState & aState={...}, nsIContent * aContent=0x09e89180, nsIFrame * aParentFrame=0x0a00ffd8, nsTableCreator & aTableCreator={...}, nsFrameItems & aChildItems={...}, nsIFrame * & aCaption=0x00000000) Line 3659 + 0x3a C++ gklayout.dll!nsCSSFrameConstructor::ConstructTableRowFrame (nsFrameConstructorState & aState={...}, nsIContent * aContent=0x09e89180, nsIFrame * aParentFrameIn=0x0a00ff98, nsStyleContext * aStyleContext=0x098a6e44, nsTableCreator & aTableCreator={...}, int aIsPseudo=0x00000000, nsFrameItems & aChildItems={...}, nsIFrame * & aNewFrame=0x0a00ffd8, int & aIsPseudoParent=0x00000000) Line 3350 + 0x22 C++ gklayout.dll!nsCSSFrameConstructor::TableProcessChild (nsFrameConstructorState & aState={...}, nsIContent * aChildContent=0x09e89180, nsIContent * aParentContent=0x0b936938, nsIFrame * aParentFrame=0x0a00ff98, nsIAtom * aParentFrameType=0x0034fe20, nsStyleContext * aParentStyleContext=0x098a6db8, nsTableCreator & aTableCreator={...}, nsFrameItems & aChildItems={...}, nsIFrame * & aCaption=0x00000000) Line 3755 + 0x2f C++ gklayout.dll!nsCSSFrameConstructor::TableProcessChildren (nsFrameConstructorState & aState={...}, nsIContent * aContent=0x0b936938, nsIFrame * aParentFrame=0x0a00ff98, nsTableCreator & aTableCreator={...}, nsFrameItems & aChildItems={...}, nsIFrame * & aCaption=0x00000000) Line 3659 + 0x3a C++ gklayout.dll!nsCSSFrameConstructor::ConstructTableRowGroupFrame (nsFrameConstructorState & aState={...}, nsIContent * aContent=0x0b936938, nsIFrame * aParentFrameIn=0x0a00ff10, nsStyleContext * aStyleContext=0x098a6db8, nsTableCreator & aTableCreator={...}, int aIsPseudo=0x00000000, nsFrameItems & aChildItems={...}, nsIFrame * & aNewFrame=0x0a00ff98, int & aIsPseudoParent=0x00000000) Line 3239 + 0x22 C++ gklayout.dll!nsCSSFrameConstructor::TableProcessChild (nsFrameConstructorState & aState={...}, nsIContent * aChildContent=0x0b936938, nsIContent * aParentContent=0x09acbde0, nsIFrame * aParentFrame=0x0a00ff10, nsIAtom * aParentFrameType=0x0034fe10, nsStyleContext * aParentStyleContext=0x098a6b8c, nsTableCreator & aTableCreator={...}, nsFrameItems & aChildItems={...}, nsIFrame * & aCaption=0x00000000) Line 3748 + 0x2f C++ gklayout.dll!nsCSSFrameConstructor::TableProcessChildren (nsFrameConstructorState & aState={...}, nsIContent * aContent=0x09acbde0, nsIFrame * aParentFrame=0x0a00ff10, nsTableCreator & aTableCreator={...}, nsFrameItems & aChildItems={...}, nsIFrame * & aCaption=0x00000000) Line 3659 + 0x3a C++ gklayout.dll!nsCSSFrameConstructor::ConstructTableFrame (nsFrameConstructorState & aState={...}, nsIContent * aContent=0x09acbde0, nsIFrame * aContentParent=0x08f6a930, nsStyleContext * aStyleContext=0x098a6b8c, nsTableCreator & aTableCreator={...}, int aIsPseudo=0x00000000, nsFrameItems & aChildItems={...}, nsIFrame * & aNewOuterFrame=0x0a00fec4, nsIFrame * & aNewInnerFrame=0x0a00ff10) Line 3118 + 0x22 C++ gklayout.dll!nsCSSFrameConstructor::ConstructFrameByDisplayType (nsFrameConstructorState & aState={...}, const nsStyleDisplay * aDisplay=0x09b684e0, nsIContent * aContent=0x09acbde0, int aNameSpaceID=0x00000000, nsIAtom * aTag=0x0034f8d0, nsIFrame * aParentFrame=0x08f6a930, nsStyleContext * aStyleContext=0x098a6b8c, nsFrameItems & aFrameItems={...}, int aHasPseudoParent=0x00000000) Line 6546 + 0x2a C++ gklayout.dll!nsCSSFrameConstructor::ConstructFrameInternal (nsFrameConstructorState & aState={...}, nsIContent * aContent=0x09acbde0, nsIFrame * aParentFrame=0x08f6a930, nsIAtom * aTag=0x0034f8d0, int aNameSpaceID=0x00000000, nsStyleContext * aStyleContext=0x098a6b8c, nsFrameItems & aFrameItems={...}, int aXBLBaseTag=0x00000000) Line 7603 + 0x34 C++ gklayout.dll!nsCSSFrameConstructor::ConstructFrame (nsFrameConstructorState & aState={...}, nsIContent * aContent=0x09acbde0, nsIFrame * aParentFrame=0x08f6a930, nsFrameItems & aFrameItems={...}) Line 7432 + 0x33 C++ gklayout.dll!nsCSSFrameConstructor::ContentAppended(nsIContent * aContainer=0x096902f0, int aNewIndexInContainer=0x00000008) Line 8567 C++ gklayout.dll!PresShell::ContentAppended(nsIDocument * aDocument=0x095ca4a8, nsIContent * aContainer=0x096902f0, int aNewIndexInContainer=0x00000008) Line 5137 C++ gklayout.dll!nsDocument::ContentAppended(nsIContent * aContainer=0x096902f0, int aNewIndexInContainer=0x00000008) Line 2064 C++ gklayout.dll!nsHTMLDocument::ContentAppended(nsIContent * aContainer=0x096902f0, int aNewIndexInContainer=0x00000008) Line 1124 C++ gklayout.dll!HTMLContentSink::NotifyAppend(nsIContent * aContainer=0x096902f0, unsigned int aStartIndex=0x00000008) Line 4009 C++ gklayout.dll!SinkContext::FlushTags(int aNotify=0x00000001) Line 1798 C++ gklayout.dll!HTMLContentSink::DidBuildModel() Line 2287 C++ gkparser.dll!CNavDTD::DidBuildModel(unsigned int anErrorCode=0x804e03f7, int aNotifySink=0x00000001, nsIParser * aParser=0x0b4ac828, nsIContentSink * aSink=0x0b87eaf0) Line 595 C++ gkparser.dll!nsParser::DidBuildModel(unsigned int anErrorCode=0x804e03f7) Line 1318 + 0x2e C++ gkparser.dll!nsParser::Terminate() Line 1404 C++ gklayout.dll!nsHTMLDocument::StopDocumentLoad() Line 936 C++ gklayout.dll!DocumentViewerImpl::Stop() Line 1223 C++ docshell.dll!nsDocShell::Stop(unsigned int aStopFlags=0x00000003) Line 3136 C++ docshell.dll!nsDocShell::Destroy() Line 3381 C++ gklayout.dll!nsFrameLoader::Destroy() Line 307 C++ gklayout.dll!nsGenericHTMLFrameElement::SetDocument(nsIDocument * aDocument=0x00000000, int aDeep=0x00000001, int aCompileEventHandlers=0x00000001) Line 3496 C++ gklayout.dll!nsGenericElement::SetDocumentInChildrenOf(nsIContent * aContent=0x09c3f8c8, nsIDocument * aDocument=0x00000000, int aCompileEventHandlers=0x00000001) Line 1771 C++ gklayout.dll!nsGenericElement::SetDocument(nsIDocument * aDocument=0x00000000, int aDeep=0x00000001, int aCompileEventHandlers=0x00000001) Line 1831 + 0x11 C++ gklayout.dll!nsGenericHTMLElement::SetDocument(nsIDocument * aDocument=0x00000000, int aDeep=0x00000001, int aCompileEventHandlers=0x00000001) Line 1329 C++ gklayout.dll!nsGenericElement::SetDocumentInChildrenOf(nsIContent * aContent=0x08ed2320, nsIDocument * aDocument=0x00000000, int aCompileEventHandlers=0x00000001) Line 1771 C++ gklayout.dll!nsGenericElement::SetDocument(nsIDocument * aDocument=0x00000000, int aDeep=0x00000001, int aCompileEventHandlers=0x00000001) Line 1831 + 0x11 C++ gklayout.dll!nsGenericHTMLElement::SetDocument(nsIDocument * aDocument=0x00000000, int aDeep=0x00000001, int aCompileEventHandlers=0x00000001) Line 1329 C++ gklayout.dll!nsDocument::SetScriptGlobalObject(nsIScriptGlobalObject * aScriptGlobalObject=0x00000000) Line 1786 C++ gklayout.dll!DocumentViewerImpl::Close() Line 1117 C++ docshell.dll!nsDocShell::SetupNewViewer(nsIContentViewer * aNewViewer=0x09c339f8) Line 5041 C++ docshell.dll!nsDocShell::Embed(nsIContentViewer * aContentViewer=0x09c339f8, const char * aCommand=0x026b2ced, nsISupports * aExtraInfo=0x00000000) Line 4376 + 0x1a C++ docshell.dll!nsDocShell::CreateContentViewer(const char * aContentType=0x0735fe08, nsIRequest * request=0x09fcd6f8, nsIStreamListener * * aContentHandler=0x06dff4c0) Line 4795 + 0x26 C++ docshell.dll!nsDSURIContentListener::DoContent(const char * aContentType=0x0735fe08, int aIsContentPreferred=0x00000000, nsIRequest * request=0x09fcd6f8, nsIStreamListener * * aContentHandler=0x06dff4c0, int * aAbortProcess=0x0012f204) Line 130 + 0x1e C++ docshell.dll!nsDocumentOpenInfo::TryContentListener (nsIURIContentListener * aListener=0x06854e78, nsIChannel * aChannel=0x09fcd6f8) Line 737 + 0x42 C++ docshell.dll!nsDocumentOpenInfo::DispatchContent(nsIRequest * request=0x09fcd6f8, nsISupports * aCtxt=0x00000000) Line 468 + 0x39 C++ docshell.dll!nsDocumentOpenInfo::OnStartRequest(nsIRequest * request=0x09fcd6f8, nsISupports * aCtxt=0x00000000) Line 328 + 0x10 C++ necko.dll!nsHttpChannel::CallOnStartRequest() Line 686 + 0x2a C++ necko.dll!nsHttpChannel::ProcessNormal() Line 847 + 0x8 C++ necko.dll!nsHttpChannel::ProcessResponse() Line 733 + 0x8 C++ necko.dll!nsHttpChannel::OnStartRequest(nsIRequest * request=0x0925bf28, nsISupports * ctxt=0x00000000) Line 3715 + 0xb C++ necko.dll!nsInputStreamPump::OnStateStart() Line 381 + 0x2a C++ necko.dll!nsInputStreamPump::OnInputStreamReady(nsIAsyncInputStream * stream=0x08c047c0) Line 337 + 0xb C++ xpcom_core.dll!nsInputStreamReadyEvent::EventHandler(PLEvent * plevent=0x09aaa8cc) Line 119 C++ xpcom_core.dll!PL_HandleEvent(PLEvent * self=0x09aaa8cc) Line 698 + 0xa C xpcom_core.dll!PL_ProcessPendingEvents(PLEventQueue * self=0x00bce008) Line 633 + 0x9 C xpcom_core.dll!nsEventQueueImpl::ProcessPendingEvents() Line 413 + 0xc C++ gkwidget.dll!nsWindow::DispatchPendingEvents() Line 3837 C++ gkwidget.dll!nsWindow::ProcessMessage(unsigned int msg=0x00000200, unsigned int wParam=0x00000000, long lParam=0x01360194, long * aRetValue=0x0012fc7c) Line 4130 C++ gkwidget.dll!nsWindow::WindowProc(HWND__ * hWnd=0x00040dba, unsigned int msg=0x00000200, unsigned int wParam=0x00000000, long lParam=0x01360194) Line 1419 + 0x1b C++ user32.dll!_InternalCallWinProc@20() + 0x28 user32.dll!_UserCallWinProcCheckWow@32() + 0xb7 user32.dll!_DispatchMessageWorker@8() + 0xdc user32.dll!_DispatchMessageW@4() + 0xf gkwidget.dll!nsAppShell::Run() Line 135 C++ appcomps.dll!nsAppStartup::Run() Line 207 C++ mozilla.exe!main1(int argc=0x00000001, char * * argv=0x00347a98, nsISupports * nativeApp=0x00bbbfb8) Line 1324 + 0x20 C++ mozilla.exe!main(int argc=0x00000001, char * * argv=0x00347a98) Line 1825 + 0x25 C++ mozilla.exe!mainCRTStartup() Line 398 + 0x11 C kernel32.dll!_BaseProcessStart@4() + 0x23
Assignee: cbiesinger → darin
Attached patch v1 patch (obsolete) — — Splinter Review
Attachment #176198 - Flags: superreview?(pavlov)
Attachment #176198 - Flags: review?(cbiesinger)
Attached patch v2 patch — — Splinter Review
take 2. this one verifies that the imgRequestProxy isn't canceled when this action is called. note: this means that the caller of AdjustPriority will get a NS_WARNING now, but that seems reasonable since they previously canceled the imgIRequest (or should really know that it is canceled).
Attachment #176198 - Attachment is obsolete: true
Attachment #176204 - Flags: superreview?(pavlov)
Attachment #176204 - Flags: review?(cbiesinger)
Attachment #176198 - Flags: superreview?(pavlov)
Attachment #176198 - Flags: review?(cbiesinger)
Attachment #176204 - Flags: superreview?(pavlov) → superreview+
Attachment #176204 - Flags: review?(cbiesinger) → review+
fixed-on-trunk
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.8beta2
Assuming darin meant to mark this fixed...
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: