fixes bug 284687 "###!!! ASSERTION: index out of range: '0 <= aIndex && aIndex < Count()" r=biesi sr=pavlov