modules/libpr0n/src/imgRequestProxy.cpp
@@ -365,14 +365,14 @@ NS_IMETHODIMP imgRequestProxy::GetPriority(PRInt32 *priority)
 
 NS_IMETHODIMP imgRequestProxy::SetPriority(PRInt32 priority)
 {
-  NS_ENSURE_STATE(mOwner);
+  NS_ENSURE_STATE(mOwner && !mCanceled);
   mOwner->AdjustPriority(this, priority - mOwner->Priority());
   return NS_OK;
 }
 
 NS_IMETHODIMP imgRequestProxy::AdjustPriority(PRInt32 priority)
 {
-  NS_ENSURE_STATE(mOwner);
+  NS_ENSURE_STATE(mOwner && !mCanceled);
   mOwner->AdjustPriority(this, priority);
   return NS_OK;
 }
